# webptz

./: .gitignore  Cargo.toml  README.md  ble.py  config.dummy.json  config.example.json  jsconfig.json  main.py  requirements.txt  ronin.py
.github/workflows/: cd.yml  release.yml
http/: button-mapper.css  button-mapper.js  controls.js  hooks.js  icon.js  index.html  main.css  main.js  mapping.js  mouse.js  server.js  settings.js  state.js  types.d.ts
http/styles/: button-mapper.css  controls.css  elements.css  icon.css  main.css  settings.css  theme.css
src/: config.rs  device.rs  main.rs
src/device/: crane.rs  dummy.rs  lanc.rs  lumix.rs  ronin.rs
