[package]
name = "webptz"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["ws"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bincode = "1.3.3"
btleplug = "0.11.6"
crc = "3.2.1"
futures = "0.3.31"
hex = "0.4.3"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.13.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
reqwest = "0.12.9"
rust-embed = "8.7.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
socket2 = "0.5.7"
tokio = { version = "1.41.1", features = ["full"] }
tokio-serial = "5.4.5"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
openssl = { version = "0.10.73", features = ["vendored"] }
